WHUB: Subnav completed. Done

--- a/src/_includes/site-header.html
+++ b/src/_includes/site-header.html
@@ -26,7 +26,7 @@
             <div class="col-3">
                 <nav class="nav-over__nav">
                     <ul class="list-reset">
-                        <li class="js-nav-over__nav-item nav-over__nav-item is-active"><a href="#nav-over-content-featured-courses">Featured Courses</a></li>
+                        <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-featured-courses">Featured Courses</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-staff-course">Staff Course</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-gender-based-violence-training">Gender-Based Violence Training</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-our-complete-parenting-courses">Our Complete Parenting Courses</a></li>
@@ -38,27 +38,19 @@
                 </nav>
             </div>
             <div class="col-8 offset-1 nav-over__content">
-                <div id="nav-over-content-featured-courses" class="nav-over__content-item is-active">
+                <div id="nav-over-content-featured-courses" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Featured Courses</h2>
                 </div>
-            </div>
-            <div class="col-8 offset-1 nav-over__content">
-                <div id="nav-over-content-staff-course" class="nav-over__content-item is-active">
+                <div id="nav-over-content-staff-course" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Staff course</h2>
                 </div>
-            </div>
-            <div class="col-8 offset-1 nav-over__content">
-                <div id="nav-over-content-gender-based-violence-training" class="nav-over__content-item is-active">
+                <div id="nav-over-content-gender-based-violence-training" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Gender based violence training</h2>
                 </div>
-            </div>
-            <div class="col-8 offset-1 nav-over__content">
-                <div id="nav-over-content-our-complete-parenting-courses" class="nav-over__content-item is-active">
+                <div id="nav-over-content-our-complete-parenting-courses" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Our complete parenting course</h2>
                 </div>
-            </div>
-            <div class="col-8 offset-1 nav-over__content">
-                <div id="nav-over-content-parents-events-talks" class="nav-over__content-item is-active">
+                <div id="nav-over-content-parents-events-talks" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Parents events and talks</h2>
                 </div>
             </div>
@@ -71,7 +63,7 @@
             <div class="col-3">
                 <nav class="nav-over__nav">
                     <ul class="list-reset">
-                        <li class="js-nav-over__nav-item nav-over__nav-item is-active"><a href="#nav-over-content-topics">Topics</a></li>
+                        <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-topics">Topics</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-learning-materials">Learning Materials</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-careers">Careers</a></li>
                     </ul>
@@ -81,13 +73,13 @@
                 </nav>
             </div>
             <div class="col-8 offset-1 nav-over__content">
-                <div id="nav-over-content-topics" class="nav-over__content-item is-active">
+                <div id="nav-over-content-topics" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Popular Topics</h2>
                 </div>
-                <div id="nav-over-content-learning-materials" class="nav-over__content-item is-active">
+                <div id="nav-over-content-learning-materials" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Learning materials</h2>
                 </div>
-                <div id="nav-over-content-careers" class="nav-over__content-item is-active">
+                <div id="nav-over-content-careers" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Careers</h2>
                 </div>
             </div>
@@ -100,7 +92,7 @@
             <div class="col-3">
                 <nav class="nav-over__nav">
                     <ul class="list-reset">
-                        <li class="js-nav-over__nav-item nav-over__nav-item is-active"><a href="#nav-over-content-featured-events">Featured Events</a></li>
+                        <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-featured-events">Featured Events</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-webinars">Webinars</a></li>
                     </ul>
                     <div class="nav-over__nav-cta">
@@ -109,10 +101,10 @@
                 </nav>
             </div>
             <div class="col-8 offset-1 nav-over__content">
-                <div id="nav-over-content-featured-events" class="nav-over__content-item is-active">
+                <div id="nav-over-content-featured-events" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Featured events</h2>
                 </div>
-                <div id="nav-over-content-webinars" class="nav-over__content-item is-active">
+                <div id="nav-over-content-webinars" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Winter Term Webinars</h2>
                 </div>
             </div>
@@ -125,7 +117,7 @@
             <div class="col-3">
                 <nav class="nav-over__nav">
                     <ul class="list-reset">
-                        <li class="js-nav-over__nav-item nav-over__nav-item is-active"><a href="#nav-over-content-popular-questions">Popular Questions</a></li>
+                        <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-popular-questions">Popular Questions</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-your-questions">Your Questions</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-self-care">Self-Care</a></li>
                     </ul>
@@ -135,13 +127,13 @@
                 </nav>
             </div>
             <div class="col-8 offset-1 nav-over__content">
-                <div id="nav-over-content-popular-questions" class="nav-over__content-item is-active">
+                <div id="nav-over-content-popular-questions" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Popular Questions</h2>
                 </div>
-                <div id="nav-over-content-your-questions" class="nav-over__content-item is-active">
+                <div id="nav-over-content-your-questions" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Your questions</h2>
                 </div>
-                <div id="nav-over-content-self-care" class="nav-over__content-item is-active">
+                <div id="nav-over-content-self-care" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Self-Care</h2>
                 </div>
             </div>
@@ -154,7 +146,7 @@
             <div class="col-3">
                 <nav class="nav-over__nav">
                     <ul class="list-reset">
-                        <li class="js-nav-over__nav-item nav-over__nav-item is-active"><a href="#nav-over-content-support">Support</a></li>
+                        <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-support">Support</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-book-one-to-one">Book a One-to-One</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-specialist-support">Specialist Support</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-therapist-directory">Therapist Directory</a></li>
@@ -165,16 +157,16 @@
                 </nav>
             </div>
             <div class="col-8 offset-1 nav-over__content">
-                <div id="nav-over-content-support" class="nav-over__content-item is-active">
+                <div id="nav-over-content-support" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Support</h2>
                 </div>
-                <div id="nav-over-content-book-one-to-one" class="nav-over__content-item is-active">
+                <div id="nav-over-content-book-one-to-one" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Book a One-to-One</h2>
                 </div>
-                <div id="nav-over-content-specialist-support" class="nav-over__content-item is-active">
+                <div id="nav-over-content-specialist-support" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Specialist Support</h2>
                 </div>
-                <div id="nav-over-content-therapist-directory" class="nav-over__content-item is-active">
+                <div id="nav-over-content-therapist-directory" class="nav-over__content-item">
                     <h2 class="nav-over__content-heading">Therapist Directory</h2>
                 </div>
             </div>
