--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,6 +1,11 @@
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="/css/app.css" />
-</head>
+<!DOCTYPE html>
+<html class="no-js">
+    {% include "head.html" %}
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <link rel="stylesheet" href="/css/app.css" />
+    </head>
+    <body>
+    
