WBHUB-254: Added the basic mobile header

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -48,4 +48,5 @@
 @import "./components/site-header";
 @import "./components/headroom";
 @import "./components/nav-over";
+@import "./components/mobile-navigation";
 @import "./components/site-footer";
