--- a/src/sass/components/mobile-navigation.scss
+++ b/src/sass/components/mobile-navigation.scss
@@ -1,3 +1,7 @@
+body.mobile-navigation-open {
+    overflow: hidden;
+}
+
 .mobile-navigation__trigger {
     border: 0;
     background: none;
@@ -8,3 +12,53 @@
 .mobile-navigation__trigger-text {
     @include visually-hidden;
 }  
+.mobile-navigation {
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    transition: opacity 0.5s;
+    background: $darkblue-5;
+    z-index: 10;
+    &.is-open {
+        pointer-events: initial;
+        opacity: 1;
+    }  
+}
+.mobile-navigation__header {
+    padding: 24px 18px;
+    background: $darkblue-10;
+}
+.mobile-navigation__header-action {
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+    .icon {
+        vertical-align: sub;
+    }
+}
+.mobile-navigation__menu {
+    position: absolute;
+    top: 97px; // Temporary. Height of .mobile-navigation__header
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-y: auto;
+}
+.mobile-navigation__menu-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 18px 30px;
+    border-bottom: 1px solid $darkblue-20;
+    font-size: $h6-font-size;
+    font-weight: 700;
+    color: $blue;
+    background: url(/images/ui/caret.svg) no-repeat center right 35px;
+    background-size: 6px auto;
+    a {
+        text-decoration: none;
+    }
+}
