WHUB-254: I feel like I'm almost there with the mobile nav

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -31,7 +31,8 @@
 @import "../../node_modules/slick-carousel/slick/slick";
 
 // 7. Custom styling
-@import "./helpers/list-reset";
+@import "./utilities/list-reset";
+@import "./utilities/rotate";
 @import "./common/typography";
 @import "./common/images";
 @import "./components/icons";
