WHUB-254: Implemented bootstrap collapsible for the dropdowns. A lot of other refactors happened here.

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -26,6 +26,7 @@
 @import "../../node_modules/bootstrap/scss/containers";
 @import "../../node_modules/bootstrap/scss/buttons";
 @import "../../node_modules/bootstrap/scss/badge";
+@import "../../node_modules/bootstrap/scss/transitions";
 
 // 6. Additional libraries
 @import "../../node_modules/slick-carousel/slick/slick";
