--- a/src/sass/components/buttons.scss
+++ b/src/sass/components/buttons.scss
@@ -1,6 +1,6 @@
 // Button CSS
 .btn {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     gap: 12px;
