WHUB-254: Fix scrolling bug

--- a/src/_includes/site-header.html
+++ b/src/_includes/site-header.html
@@ -41,6 +41,9 @@
             <li><a class="js-mobile-navigation__menu-item mobile-navigation__menu-item d-flex align-items-center justify-content-between" href="#mobile-nav-faq"><span class="mobile-navigation__menu-item-text">FAQ</span> <span class="icon icon-nav-down rotate-270 d-flex mobile-navigation__menu-item-icon mobile-navigation__menu-item-icon--nav-down"></span></a></li>
             <li><a class="js-mobile-navigation__menu-item mobile-navigation__menu-item d-flex align-items-center justify-content-between" href="#mobile-nav-support"><span class="mobile-navigation__menu-item-text">Support</span> <span class="icon icon-nav-down rotate-270 d-flex mobile-navigation__menu-item-icon mobile-navigation__menu-item-icon--nav-down"></span></a></li>
         </ul>
+        <div class="mobile-navigation__cta">
+            <a href="#" class="btn btn-mid-light">Full Overview</a>
+        </div>
     </div>
 </div>
 <div id="mobile-nav-courses" class="js-mobile-navigation mobile-navigation mobile-navigation__sub-menu">
@@ -64,6 +67,33 @@
             <li><a class="js-mobile-navigation__menu-item mobile-navigation__menu-item d-flex align-items-center justify-content-between" href="/h"><span class="mobile-navigation__menu-item-text">Our Complete Parenting Courses</span><span class="icon icon-link-arrow d-flex mobile-navigation__menu-item-icon"></span></a></li>
             <li><a class="js-mobile-navigation__menu-item mobile-navigation__menu-item d-flex align-items-center justify-content-between" href="/j"><span class="mobile-navigation__menu-item-text">Parent Events Talks</span><span class="icon icon-link-arrow d-flex mobile-navigation__menu-item-icon"></span></a></li>
         </ul>
+        <div class="mobile-navigation__cta">
+            <a href="#" class="btn btn-mid-light">Full Overview</a>
+        </div>
+    </div>
+</div>
+<div id="mobile-nav-resources" class="js-mobile-navigation mobile-navigation mobile-navigation__sub-menu">
+    <div class="js-mobile-navigation__header mobile-navigation__header d-flex align-items-center justify-content-between">
+        <a class="js-mobile-navigation__back-trigger mobile-navigation__header-action rotate-180" aria-controls="mobile-nav-courses" href="#mobile-navigation"><span class="icon icon-link-arrow"></span><span class="visually-hidden">Back to main menu</span></a>
+        <h2 class="mobile-navigation__header-title">Resources</h2>
+        <a class="mobile-navigation__header-action js-mobile-navigation__close-trigger" href="#mobile-navigation-trigger"><span class="icon icon-close"></span><span class="visually-hidden">Close</span></a>
+    </div>
+    <div class="js-mobile-navigation__menu mobile-navigation__menu">
+        <ul class="list-reset">
+            <li>
+                <div class="js-mobile-navigation__menu-item mobile-navigation__menu-item">
+                    <button data-bs-toggle="collapse" data-bs-target="#mobile-navigation-collapsible-1" class="js-mobile-navigation__collapsible-trigger mobile-navigation__collapsible-trigger d-flex align-items-center justify-content-between"><span class="mobile-navigation__menu-item-text">Topics</span><span class="icon icon-arrowdown d-flex mobile-navigation__menu-item-icon"></span></button>
+                </div>
+                <div id="mobile-navigation-collapsible-1" class="collapse mobile-navigation__collapsible-content">
+                    <p>This is some content</p>
+                </div>
+            </li>
+            <li><a class="js-mobile-navigation__menu-item mobile-navigation__menu-item d-flex align-items-center justify-content-between" href="/course-xl"><span class="mobile-navigation__menu-item-text">Learning Materials</span><span class="icon icon-link-arrow d-flex mobile-navigation__menu-item-icon"></span></a></li>
+            <li><a class="js-mobile-navigation__menu-item mobile-navigation__menu-item d-flex align-items-center justify-content-between" href="/g"><span class="mobile-navigation__menu-item-text">Careers Advice</span><span class="icon icon-link-arrow d-flex mobile-navigation__menu-item-icon"></span></a></li>
+            <li><a class="js-mobile-navigation__menu-item mobile-navigation__menu-item d-flex align-items-center justify-content-between" href="/h"><span class="mobile-navigation__menu-item-text">Self Care</span><span class="icon icon-link-arrow d-flex mobile-navigation__menu-item-icon"></span></a></li>
+            <li><a class="js-mobile-navigation__menu-item mobile-navigation__menu-item d-flex align-items-center justify-content-between" href="/j"><span class="mobile-navigation__menu-item-text">All resources</span><span class="icon icon-link-arrow d-flex mobile-navigation__menu-item-icon"></span></a></li>
+        </ul>
+
     </div>
 </div>
 
