--- a/src/sass/components/mobile-navigation.scss
+++ b/src/sass/components/mobile-navigation.scss
@@ -49,7 +49,7 @@ html.mobile-navigation-open {
 
 .mobile-navigation__menu {
     position: absolute;
-    top: 97px; // Temporary. Height of .mobile-navigation__header
+    top: 97px;
     bottom: 0;
     left: 0;
     right: 0;
