--- a/src/_includes/site-header.html
+++ b/src/_includes/site-header.html
@@ -1,8 +1,9 @@
+<div class="nav-over__overlay"></div>
 <header class="js-site-header site-header">
     <div class="container">
         <div class="row">
             <div class="col-8 col-md-5 col-lg-4 col-xl-3">
-                <h1 class="col site-header__logo">
+                <h1 class="col site-header__logo js-site-header__logo">
                     <a href="/">
                         <img src="/images/ui/wellbeing-hub-logo.svg" alt="The Wellbeing Hub, from Teen Tips">
                     </a>
@@ -109,7 +110,7 @@
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-our-complete-parenting-courses">Our Complete Parenting Courses</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-parents-events-talks">Parent Events Talks</a></li>
                     </ul>
-                    <div class="nav-over__nav-cta">
+                    <div class="nav-over__nav-cta d-grid">
                         <a href="#" class="btn btn-inverse">Full Overview</a>
                     </div>
                 </nav>
@@ -144,7 +145,7 @@
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-learning-materials">Learning Materials</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-careers">Careers</a></li>
                     </ul>
-                    <div class="nav-over__nav-cta">
+                    <div class="nav-over__nav-cta d-grid">
                         <a href="#" class="btn btn-inverse">Full Overview</a>
                     </div>
                 </nav>
@@ -172,7 +173,7 @@
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-featured-events">Featured Events</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-webinars">Webinars</a></li>
                     </ul>
-                    <div class="nav-over__nav-cta">
+                    <div class="nav-over__nav-cta d-grid">
                         <a href="#" class="btn btn-inverse">Full Overview</a>
                     </div>
                 </nav>
@@ -198,7 +199,7 @@
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-your-questions">Your Questions</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-self-care">Self-Care</a></li>
                     </ul>
-                    <div class="nav-over__nav-cta">
+                    <div class="nav-over__nav-cta d-grid">
                         <a href="#" class="btn btn-inverse">Full Overview</a>
                     </div>
                 </nav>
@@ -228,7 +229,7 @@
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-specialist-support">Specialist Support</a></li>
                         <li class="js-nav-over__nav-item nav-over__nav-item"><a href="#nav-over-content-therapist-directory">Therapist Directory</a></li>
                     </ul>
-                    <div class="nav-over__nav-cta">
+                    <div class="nav-over__nav-cta d-grid">
                         <a href="#" class="btn btn-inverse">Full Overview</a>
                     </div>
                 </nav>
