--- a/src/sass/components/nav-over.scss
+++ b/src/sass/components/nav-over.scss
@@ -1,9 +1,12 @@
 .nav-over-open {
     overflow: hidden;;
 }
+
 .nav-over {
+    pointer-events: none;
+    opacity: 0;
     position: fixed;
-    height: 100vh;
+    bottom: 10vh;
     top: 0; 
     padding-top: 114px; 
     left: 0;
@@ -11,10 +14,12 @@
     z-index: 9;
     overflow-y: auto;
     background: $darkblue-5;
-    display: none;
+    box-shadow: 0px 24px 48px rgba(28, 37, 98, 0.25);
+    transition: opacity 0.5s;
     
     &.is-open {
-        display: block;
+        pointer-events: initial;
+        opacity: 1;
     }
 }
 
@@ -24,7 +29,7 @@
     justify-content: space-between;
     position: fixed;
     top: 114px;
-    bottom: 0;
+    bottom: 10vh;
     overflow-y: auto;
     background: $darkblue-10;
     @include media-breakpoint-down(xl) {
@@ -73,4 +78,22 @@
 .nav-over__content-heading {
     font-size: $h4-font-size;
     font-weight: 400;
+}
+
+.nav-over__overlay {
+    pointer-events: none;
+    opacity: 0;
+    position: fixed;
+    bottom: 0;
+    top: 0; 
+    left: 0;
+    right: 0;
+    z-index: 5;
+    transition: opacity 0.5s;
+    background: rgba(0,0,0,0.3);
+    
+    &.is-visible {
+        pointer-events: initial;
+        opacity: 1;
+    }
 }
