--- a/src/sass/components/nav-over.scss
+++ b/src/sass/components/nav-over.scss
@@ -17,6 +17,10 @@
     box-shadow: 0px 24px 48px rgba(28, 37, 98, 0.25);
     transition: opacity 0.5s;
     
+    html.no-animation & {
+        transition: none;
+    }
+    
     &.is-open {
         pointer-events: initial;
         opacity: 1;
