WHUB-256: WIP membership nav

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -52,3 +52,4 @@
 @import "./components/nav-over";
 @import "./components/mobile-navigation";
 @import "./components/site-footer";
+@import "./components/membership-navigation";
