--- a/src/sass/components/badge.scss
+++ b/src/sass/components/badge.scss
@@ -8,3 +8,10 @@
         text-decoration: underline;
     }
 }
+
+.badge--alternate {
+    padding: pxtorem(4) pxtorem(12);
+    background-color: $darkblue-10;
+    color: $black;
+    border-radius: 99rem;
+}
