WHUB-256: Membership navigation

--- a/src/sass/components/membership-navigation.scss
+++ b/src/sass/components/membership-navigation.scss
@@ -8,7 +8,10 @@
 .membership-navigation__text {
     margin: 0;
     gap: pxtorem(8);
-    font-size: $h6-font-size;
+    font-size: $h7-font-size;
+    @include media-breakpoint-up(sm) {
+        font-size: $h6-font-size;
+    }
 }
 
 .membership-navigation__icon {
