--- a/src/sass/components/nav-over.scss
+++ b/src/sass/components/nav-over.scss
@@ -1,5 +1,5 @@
 .nav-over-open {
-    overflow: hidden;;
+    overflow: hidden;
 }
 
 .nav-over {
@@ -7,16 +7,16 @@
     opacity: 0;
     position: fixed;
     bottom: 10vh;
-    top: 0; 
-    padding-top: 114px; 
+    top: 0;
+    padding-top: 114px;
     left: 0;
     right: 0;
     z-index: 9;
     overflow-y: auto;
     background: $darkblue-5;
-    box-shadow: 0px 24px 48px rgba(28, 37, 98, 0.25);
+    box-shadow: 0 24px 48px rgb(28 37 98 / 25%);
     transition: opacity 0.5s;
-    
+
     &.is-open {
         pointer-events: initial;
         opacity: 1;
@@ -32,6 +32,7 @@
     bottom: 10vh;
     overflow-y: auto;
     background: $darkblue-10;
+
     @include media-breakpoint-down(xl) {
         top: 0;
         bottom: 0;
@@ -52,9 +53,10 @@
         font-weight: 700;
         border-bottom-color: $darkblue-5;
     }
-    
+
     a {
         text-decoration: none;
+
         &:hover {
             text-decoration: underline;
         }
@@ -62,13 +64,15 @@
 }
 
 .nav-over__nav-cta {
-    padding: pxtorem(18) pxtorem(24); 
+    padding: pxtorem(18) pxtorem(24);
 }
 
 .nav-over__content-item {
     padding-top: 37px;
+
     .js & {
         display: none;
+
         &.is-active {
             display: block;
         }
@@ -85,13 +89,13 @@
     opacity: 0;
     position: fixed;
     bottom: 0;
-    top: 0; 
+    top: 0;
     left: 0;
     right: 0;
     z-index: 5;
     transition: opacity 0.5s;
-    background: rgba(0,0,0,0.3);
-    
+    background: rgb(0 0 0 / 30%);
+
     &.is-visible {
         pointer-events: initial;
         opacity: 1;
