WHUB-258: Action cards

--- a/src/sass/overrides/variables.scss
+++ b/src/sass/overrides/variables.scss
@@ -143,8 +143,12 @@ $spacers: (
     // 40px
     4: $spacer * 2.5,
     // 50px
-    5: $spacer * 4,
+    5: $spacer * 3,
+    // 60px
+    6: $spacer * 4,
     // 80px
-    6: $spacer * 5,
+    7: $spacer * 5,
     // 100px
+    8: $spacer * 6,
+    // 120px
 );
