--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -41,6 +41,7 @@
 @import "./components/card";
 @import "./components/highlight-card";
 @import "./components/summary-card";
+@import "./components/action-card";
 @import "./components/hero";
 @import "./components/banner";
 @import "./components/buttons";
