WHUB-259: Accreditation component

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -54,3 +54,4 @@
 @import "./components/mobile-navigation";
 @import "./components/site-footer";
 @import "./components/membership-navigation";
+@import "./components/accreditations";
