--- a/src/sass/components/accreditations.scss
+++ b/src/sass/components/accreditations.scss
@@ -1,6 +1,7 @@
 .accreditations {
     position: relative;
     padding: 30px 0 40px;
+    overflow: hidden;
     background: $blue;
     color: $white;
 
@@ -33,8 +34,9 @@
     position: absolute;
     top: 0;
     right: -20px;
-    padding: 46px 0;
+    padding: 20px 0;
     gap: 12px;
+    z-index: 2;
     background: $blue-5;
     border-radius: 0 0 0 $border-radius;
     width: 37.6vw;
@@ -42,6 +44,29 @@
 
     @include media-breakpoint-up(lg) {
         padding: 60px 0 80px;
+    }
+}
+
+.accreditations__shadow {
+    &::after {
+        content: "";
+        display: block;
+        width: 87px;
+        height: 87px;
+        position: absolute;
+        top: 97px;
+        right: 0;
+        background: rgba($darkblue, 0.2);
+        border-radius: 0 0 0 $border-radius;
+
+        @include media-breakpoint-up(sm) {
+            width: 241px;
+            height: 241px;
+            right: 24.2142857%;
+            top: auto;
+            bottom: 0;
+            border-radius: $border-radius $border-radius 0 0;
+        }
     }
 }
 
