--- a/src/sass/components/banner.scss
+++ b/src/sass/components/banner.scss
@@ -1,21 +1,9 @@
 .banner {
     position: relative;
-    padding-top: 129px;
-    padding-bottom: 129px;
-
-    @include media-breakpoint-up(lg) {
-        padding-top: pxtorem(160);
-        padding-bottom: pxtorem(160);
-    }
 }
 
 .banner--dark {
     color: $white;
-}
-
-.banner--flipped {
-    padding-top: 80px;
-    padding-bottom: 80px;
 }
 
 .banner__content {
@@ -28,6 +16,7 @@
 
     border-radius: $border-radius;
     background: $blue-10;
+    box-shadow: 0px 24px 48px rgba(28, 37, 98, 0.25);
 
     .banner--dark & {
         background: $blue;
@@ -120,7 +109,10 @@
 
 .banner__image {
     overflow: hidden;
-    border-radius: $border-radius;
+    border-radius: 0 0 $border-radius $border-radius;
+    @include media-breakpoint-down(lg) {
+        border-radius: 0 0 $border-radius 0;
+    }
 
     .banner--flipped & {
         @include media-breakpoint-down(sm) {
