WBHUB-260: Added teaser card component

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -42,6 +42,7 @@
 @import "./components/highlight-card";
 @import "./components/summary-card";
 @import "./components/action-card";
+@import "./components/teaser-card";
 @import "./components/hero";
 @import "./components/banner";
 @import "./components/buttons";
