--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -56,3 +56,4 @@
 @import "./components/site-footer";
 @import "./components/membership-navigation";
 @import "./components/accreditations";
+@import "./components/pagination";
