WHUB-266: Add hover styling

--- a/src/sass/components/pagination.scss
+++ b/src/sass/components/pagination.scss
@@ -4,6 +4,10 @@
     background: $darkblue-5;
     border-radius: $border-radius;
     text-decoration: none;
+    &:hover {
+        background: $darkblue-10;
+        color: $darkblue;
+    }
 }
 
 .pagination__link-next {
