--- a/src/sass/overrides/forms.scss
+++ b/src/sass/overrides/forms.scss
@@ -1,20 +1,20 @@
 // Forms
 
 // scss-docs-start form-text-variables
-$form-text-margin-top: 0.25rem !default;
-$form-text-font-size: $small-font-size !default;
+$form-text-margin-top: pxtorem(12);
+$form-text-font-size: $h7-font-size;
 $form-text-font-style: null !default;
 $form-text-font-weight: null !default;
-$form-text-color: $text-muted !default;
+$form-text-color: $body-color;
 
 // scss-docs-end form-text-variables
 
 // scss-docs-start form-label-variables
-$form-label-margin-bottom: 0.5rem !default;
-$form-label-font-size: null !default;
+$form-label-margin-bottom: pxtorem(12);
+$form-label-font-size: $h6-font-size;
 $form-label-font-style: null !default;
-$form-label-font-weight: null !default;
-$form-label-color: null !default;
+$form-label-font-weight: 700;
+$form-label-color: $body-color;
 
 // scss-docs-end form-label-variables
 
@@ -36,10 +36,10 @@ $input-disabled-color: null !default;
 $input-disabled-bg: $gray-200 !default;
 $input-disabled-border-color: null !default;
 $input-color: $body-color !default;
-$input-border-color: $gray-400 !default;
+$input-border-color: $darkblue-20;
 $input-border-width: $input-btn-border-width !default;
 $input-box-shadow: $box-shadow-inset !default;
-$input-border-radius: $border-radius !default;
+$input-border-radius: 8px;
 $input-border-radius-sm: $border-radius-sm !default;
 $input-border-radius-lg: $border-radius-lg !default;
 $input-focus-bg: $input-bg !default;
@@ -47,7 +47,7 @@ $input-focus-border-color: tint-color($component-active-bg, 50%) !default;
 $input-focus-color: $input-color !default;
 $input-focus-width: $input-btn-focus-width !default;
 $input-focus-box-shadow: $input-btn-focus-box-shadow !default;
-$input-placeholder-color: $gray-600 !default;
+$input-placeholder-color: $darkblue-50;
 $input-plaintext-color: $body-color !default;
 $input-height-border: $input-border-width * 2 !default;
 $input-height-inner: add(
@@ -233,3 +233,10 @@ $form-feedback-icon-invalid-color: $form-feedback-invalid-color !default;
 $form-feedback-icon-invalid: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='#{$form-feedback-icon-invalid-color}'><circle cx='6' cy='6' r='4.5'/><path stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/><circle cx='6' cy='8.2' r='.6' fill='#{$form-feedback-icon-invalid-color}' stroke='none'/></svg>") !default;
 
 // scss-docs-end form-feedback-variables
+
+.input-group .btn {
+    border-radius: 8px;
+    @include media-breakpoint-down(sm) {
+        width: auto !important;
+    }
+}
