WHUB-270: Topic listing component

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -61,3 +61,4 @@
 @import "./components/accreditations";
 @import "./components/pagination";
 @import "./components/search-panel";
+@import "./components/topic-listing";
