WHUB-270: Fix responsive button styling

--- a/src/sass/components/buttons.scss
+++ b/src/sass/components/buttons.scss
@@ -6,7 +6,7 @@
     gap: 12px;
 
     @include media-breakpoint-down(sm) {
-        display: block;
+        display: flex;
         text-align: center;
         width: 100%;
     }
