--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -62,3 +62,4 @@
 @import "./components/pagination";
 @import "./components/search-panel";
 @import "./components/topic-listing";
+@import "./components/index-listing";
