WHUB-272: Change font family variable name to be more useful

--- a/src/sass/overrides/variables.scss
+++ b/src/sass/overrides/variables.scss
@@ -79,7 +79,7 @@ $theme-colors: map.merge(
 );
 
 // Typography
-$font-family-sans-serif: "DM Sans", "Helvetica Neue", "Noto Sans",
+$font-family-heading: "DM Sans", "Helvetica Neue", "Noto Sans",
     "Liberation Sans", arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol", "Noto Color Emoji";
 $font-family-copy: "AtkinsonHyperlegible", "Helvetica Neue", "Noto Sans",
