--- a/src/sass/components/site-footer.scss
+++ b/src/sass/components/site-footer.scss
@@ -1,8 +1,8 @@
 .site-footer {
-    font-family: $font-family-sans-serif;
+    font-family: $font-family-heading;
 
     p {
-        font-family: $font-family-sans-serif;
+        font-family: $font-family-heading;
     }
 
     a {
