WHUB-272: Flash cards

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -46,6 +46,7 @@
 @import "./components/summary-card";
 @import "./components/action-card";
 @import "./components/teaser-card";
+@import "./components/flash-card";
 @import "./components/hero";
 @import "./components/banner";
 @import "./components/buttons";
