WHUB-313: Replcace social svg icons with font

--- a/src/sass/components/site-footer.scss
+++ b/src/sass/components/site-footer.scss
@@ -59,6 +59,8 @@
 .site-footer__social {
     display: flex;
     gap: 30px;
+    color: $blue;
+    font-size: pxtorem(24);
 
     @include media-breakpoint-up(lg) {
         justify-content: flex-end;
