WHUB-280: Added social share pane along with an example content page for testing

--- a/src/sass/components/buttons.scss
+++ b/src/sass/components/buttons.scss
@@ -74,6 +74,12 @@
     }
 }
 
+.btn.btn-invisible-primary {
+    background: none;
+    border: 0;
+    color: $blue;
+}
+
 .btn.btn-round {
     padding: pxtoem(3, 16) pxtoem(10, 16) pxtoem(7, 16);
     border-radius: 99em;
