--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -64,3 +64,4 @@
 @import "./components/search-panel";
 @import "./components/topic-listing";
 @import "./components/index-listing";
+@import "./components/social-share-pane";
