--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -65,3 +65,4 @@
 @import "./components/topic-listing";
 @import "./components/index-listing";
 @import "./components/social-share-pane";
+@import "./components/topic-navigation";
