--- a/src/sass/components/topic-navigation.scss
+++ b/src/sass/components/topic-navigation.scss
@@ -1,20 +1,37 @@
 .topic-navigation {
-    margin-left: -#{pxtorem(60)};
     background: $darkblue-5;
     font-family: $font-family-heading;
-    top: 0;
-    left: 0;
-    bottom: 0;
+    margin: 0 calc(-0.5 * var(--bs-gutter-x));
+    @include media-breakpoint-up(md) {
+        margin-left: -#{pxtorem(60)};
+    }
 }
 
 .topic-navigation__title {
-    padding: pxtorem(18) pxtorem(40) pxtorem(18) pxtorem(160);
-    margin-left: -#{pxtorem(60)};
+    padding: pxtorem(18) pxtorem(30);
     margin-bottom: 0;
     border-bottom: 1px solid $darkblue-20;
-    font-size: $h5-font-size;
-    font-weight: 400;
+    font-size: $h6-font-size;
     background: $darkblue-5;
+    @include media-breakpoint-down(md) {
+        display: flex;
+        justify-content: space-between;
+    }
+    @include media-breakpoint-up(md) {
+        padding: pxtorem(18) pxtorem(40) pxtorem(18) pxtorem(160);
+        margin-left: -#{pxtorem(60)};
+        font-size: $h5-font-size;
+        font-weight: 400;
+    }
+}
+
+.topic-navigation__title-icon {
+    @include media-breakpoint-up(md) {
+        display: none;
+    }
+    .topic-navigation__title.is-open & {
+        transform: rotate(180deg);
+    }
 }
 
 .topic-navigation__list {
@@ -26,18 +43,23 @@
 }
 
 .topic-navigation__list-item-link {
+    padding: pxtorem(18) pxtorem(30);
     gap: 11px;
-    padding: pxtorem(18) pxtorem(25) pxtorem(18) pxtorem(160);
-    margin-left: -#{pxtorem(60)};
-    border-bottom: 1px solid $darkblue-20;
     font-size: $h7-font-size;
+    border-bottom: 1px solid $darkblue-20;
     text-decoration: none;
     background: $darkblue-5;
+    @include media-breakpoint-up(md) {
+        padding: pxtorem(18) pxtorem(25) pxtorem(18) pxtorem(160);
+        margin-left: -#{pxtorem(60)};
+    }
+    
     &.is-active {
         background: $white;
         font-weight: 700;
         padding-right: pxtorem(40);
     }
+    
     &:hover {
         text-decoration: underline;
     }
