--- a/src/sass/components/icons.scss
+++ b/src/sass/components/icons.scss
@@ -42,128 +42,166 @@
 }
 /* stylelint-enable font-family-no-missing-generic-family-keyword */
 
-
-.icon-arrowdown:before {
+.icon-arrowdown::before {
     content: "\61";
-  }
-  .icon-arrowleft:before {
+}
+
+.icon-arrowleft::before {
     content: "\62";
-  }
-  .icon-arrowright:before {
+}
+
+.icon-arrowright::before {
     content: "\63";
-  }
-  .icon-arrowup:before {
+}
+
+.icon-arrowup::before {
     content: "\64";
-  }
-  .icon-article:before {
+}
+
+.icon-article::before {
     content: "\65";
-  }
-  .icon-chat:before {
+}
+
+.icon-chat::before {
     content: "\66";
-  }
-  .icon-checkbox:before {
+}
+
+.icon-checkbox::before {
     content: "\67";
-  }
-  .icon-close:before {
+}
+
+.icon-close::before {
     content: "\68";
-  }
-  .icon-content:before {
+}
+
+.icon-content::before {
     content: "\69";
-  }
-  .icon-course:before {
+}
+
+.icon-course::before {
     content: "\6a";
-  }
-  .icon-download:before {
+}
+
+.icon-download::before {
     content: "\6b";
-  }
-  .icon-email:before {
+}
+
+.icon-email::before {
     content: "\6c";
-  }
-  .icon-event:before {
+}
+
+.icon-event::before {
     content: "\6d";
-  }
-  .icon-phone:before {
+}
+
+.icon-phone::before {
     content: "\6e";
-  }
-  .icon-nav-down:before {
+}
+
+.icon-nav-down::before {
     content: "\6f";
-  }
-  .icon-menu:before {
+}
+
+.icon-menu::before {
     content: "\70";
-  }
-  .icon-medialaptop:before {
+}
+
+.icon-medialaptop::before {
     content: "\71";
-  }
-  .icon-link-arrow:before {
+}
+
+.icon-link-arrow::before {
     content: "\72";
-  }
-  .icon-link:before {
+}
+
+.icon-link::before {
     content: "\73";
-  }
-  .icon-jump-up:before {
+}
+
+.icon-jump-up::before {
     content: "\74";
-  }
-  .icon-jump-down:before {
+}
+
+.icon-jump-down::before {
     content: "\75";
-  }
-  .icon-favourited:before {
+}
+
+.icon-favourited::before {
     content: "\76";
-  }
-  .icon-favorite:before {
+}
+
+.icon-favorite::before {
     content: "\77";
-  }
-  .icon-faqs:before {
+}
+
+.icon-faqs::before {
     content: "\78";
-  }
-  .icon-exit:before {
+}
+
+.icon-exit::before {
     content: "\79";
-  }
-  .icon-qa:before {
+}
+
+.icon-qa::before {
     content: "\7a";
-  }
-  .icon-search:before {
+}
+
+.icon-search::before {
     content: "\41";
-  }
-  .icon-self-care:before {
+}
+
+.icon-self-care::before {
     content: "\42";
-  }
-  .icon-share:before {
+}
+
+.icon-share::before {
     content: "\43";
-  }
-  .icon-support:before {
+}
+
+.icon-support::before {
     content: "\44";
-  }
-  .icon-headphone:before {
+}
+
+.icon-headphone::before {
     content: "\45";
-  }
-  .icon-tick:before {
+}
+
+.icon-tick::before {
     content: "\46";
-  }
-  .icon-topics:before {
+}
+
+.icon-topics::before {
     content: "\47";
-  }
-  .icon-unlock:before {
+}
+
+.icon-unlock::before {
     content: "\48";
-  }
-  .icon-user:before {
+}
+
+.icon-user::before {
     content: "\49";
-  }
-  .icon-video:before {
+}
+
+.icon-video::before {
     content: "\4a";
-  }
-  .icon-facebook:before {
+}
+
+.icon-facebook::before {
     content: "\4b";
-  }
-  .icon-twitter:before {
+}
+
+.icon-twitter::before {
     content: "\4d";
-  }
-  .icon-linkedin:before {
+}
+
+.icon-linkedin::before {
     content: "\4c";
-  }
-  .icon-instagram:before {
+}
+
+.icon-instagram::before {
     content: "\4f";
-  }
-  .icon-youtube:before {
+}
+
+.icon-youtube::before {
     content: "\50";
-  }
-  
+}
