--- a/src/sass/components/flash-card.scss
+++ b/src/sass/components/flash-card.scss
@@ -2,13 +2,14 @@
     padding: 20px 30px 20px 24px;
     gap: 12px;
     background: $white;
-    box-shadow: 0px 4px 18px rgba(28, 37, 98, 0.1);
+    box-shadow: 0 4px 18px rgb(28 37 98 / 10%);
     border-radius: $border-radius;
     font-size: $h6-font-size;
     color: $blue;
     font-family: $font-family-heading;
     font-weight: bold;
     text-decoration: none;
+
     &:hover {
         text-decoration: underline;
     }
