--- a/src/sass/components/topic-navigation.scss
+++ b/src/sass/components/topic-navigation.scss
@@ -53,20 +53,20 @@
     border-bottom: 1px solid $darkblue-20;
     text-decoration: none;
     background: $darkblue-5;
-
+    
     @include media-breakpoint-up(md) {
         padding: pxtorem(18) pxtorem(25) pxtorem(18) pxtorem(160);
         margin-left: -#{pxtorem(60)};
     }
-
+    
     &.is-active {
         background: $white;
         font-weight: 700;
         padding-right: pxtorem(40);
     }
-
+    
     &:hover {
-        text-decoration: underline;
+        background: $darkblue-10;
     }
 }
 
