WHUB-286: First go at account prompt

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -66,3 +66,4 @@
 @import "./components/index-listing";
 @import "./components/social-share-pane";
 @import "./components/topic-navigation";
+@import "./components/account-prompt";
