--- a/src/sass/overrides/buttons.scss
+++ b/src/sass/overrides/buttons.scss
@@ -4,6 +4,7 @@
 $btn-font-size: $h6-font-size;
 $btn-padding-y: pxtoem(9, 16);
 $btn-padding-x: pxtoem(28, 16);
+$input-btn-font-family: $font-family-heading;
 $btn-font-family: $input-btn-font-family !default;
 $btn-line-height: $input-btn-line-height !default;
 $btn-white-space: null !default; // Set to `nowrap` to prevent text wrapping
